# icw

./: .gitignore  AI_CONTRIBUTING.md  README.md  pyproject.toml  run_linters.sh
.github/workflows/: appimage.yml  ci.yml  publish.yml
src/icw/: api.py  cli.py
src/icw/static/: explorer.html  index.html
tests/: dfx.json  download_artifacts.sh  test_api.py  test_cli.py  test_integration.py  test_ui.py
