[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "internet-computer-wallet"
version = "0.3.3"
description = "CLI for ICRC-1 tokens (ckBTC, ckETH, ICP, ckUSDC, ckUSDT) on the Internet Computer"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["icp", "ckbtc", "icrc-1", "dfx", "wallet"]
classifiers = ["Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License"]

[project.optional-dependencies]
dev = ["ruff>=0.4", "black>=24.0"]
ui = ["fastapi>=0.109.0", "uvicorn>=0.27.0"]
test = ["httpx>=0.26.0", "playwright>=1.40.0"]

[project.scripts]
icw = "icw.cli:main"
icw-ui = "icw.cli:ui"

[project.urls]
Repository = "https://github.com/smart-social-contracts/icw"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["icw*"]

[tool.setuptools.package-data]
icw = ["static/*"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.black]
line-length = 120
target-version = ["py39"]
